# brightblue-task

object_recognition/: pyproject.toml
object_recognition/object_recognition/: camTest.py
