[tool.poetry]
name = "object_recognition"
version = "0.1.0"
description = ""
authors = ["Roman Matviitsiv <matviitsivroman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
